// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatCard should match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "flex": 1,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={28}
    bbWidth={28}
    fill="none"
    focusable={false}
    height={28}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#7BAAA5"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 28,
          "width": 28,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4286294693,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M12 7v14"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286294693,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGPath
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286294693,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "fontWeight": "700",
          "marginBottom": 4,
          "marginTop": 8,
        },
        {
          "color": "#7BAAA5",
        },
      ]
    }
  >
    75
  </Text>
  <Text
    style={
      {
        "color": "#6A6A6A",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    Total Terms
  </Text>
</View>
`;

exports[`StatCard should match snapshot with trend 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderRadius": 16,
      "elevation": 2,
      "flex": 1,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.05,
      "shadowRadius": 4,
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={28}
    bbWidth={28}
    fill="none"
    focusable={false}
    height={28}
    meetOrSlice={0}
    minX={0}
    minY={0}
    stroke="#7BAAA5"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 28,
          "width": 28,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={28}
    xmlns="http://www.w3.org/2000/svg"
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "stroke",
          "strokeWidth",
          "strokeLinecap",
          "strokeLinejoin",
        ]
      }
      stroke={
        {
          "payload": 4286294693,
          "type": 0,
        }
      }
      strokeLinecap={1}
      strokeLinejoin={1}
      strokeWidth={2}
    >
      <RNSVGPath
        d="M12 7v14"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286294693,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGPath
        d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4286294693,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <Text
    style={
      [
        {
          "fontSize": 24,
          "fontWeight": "700",
          "marginBottom": 4,
          "marginTop": 8,
        },
        {
          "color": "#7BAAA5",
        },
      ]
    }
  >
    75
  </Text>
  <Text
    style={
      {
        "color": "#6A6A6A",
        "fontSize": 12,
        "textAlign": "center",
      }
    }
  >
    Total Terms
  </Text>
  <Text
    style={
      {
        "color": "#8FAC8E",
        "fontSize": 10,
        "fontWeight": "600",
        "marginTop": 4,
      }
    }
  >
    +10%
  </Text>
</View>
`;
